Getting devices by group and its respective API documentation
